--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -6,9 +6,6 @@
     <div class="container">
         <div class="left-section">
             <a class="logo" href="/"><img loading="lazy" decoding="async" src="/assets/images/logo-light.png" alt="logo" width="264" height="78"></a>
-            <p>
-                Extra content if you need it, if not you can delete this whole p tag. I usually do.
-            </p>
         </div>
         <div class="right-section">
             <div class="lists">
@@ -20,13 +17,16 @@
                         <a href="/">Home</a>
                     </li>
                     <li>
-                        <a href="/about">About Us</a>
+                        <a href="/about">About</a>
                     </li>
                     <li>
-                        <a href="/projects">Projects</a>
+                        <a href="/myafterlife">My Afterlife</a>
                     </li>
                     <li>
-                        <a href="/testimonials">Reviews</a>
+                        <a href="/events">Events</a>
+                    </li>
+                    <li>
+                        <a href="/blog">Blog</a>
                     </li>
                     <li>
                         <a href="/contact">Contact</a>
@@ -34,19 +34,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <h2>Services</h2>
-                    </li>
-                    <li>Service1</li>
-                    <li>Service2</li>
-                    <li>Service4</li>
-                    <li>Service5</li>
-                </ul>
-                <ul>
-                    <li>
                         <h2>Contact</h2>
-                    </li>
-                    <li>
-                        <a href="/contact">First Address Line<br>Denver CO 80206</a>
                     </li>
                     <li>
                         <a href="tel:555-779-4407">T: (555) 779-4407</a>
@@ -61,7 +49,7 @@
 
     <div class="credit">
         <span>Designed and Hand Coded by</span>
-        <a href="" target="_blank" rel="noopener">Your Company Name</a>
-        <span class="copyright"> Copyright 2021 - Present</span>
+        <a href="" target="_blank" rel="noopener">Out of this World Web Design</a>
+        <span class="copyright"> Copyright 2023 - Present</span>
     </div>
 </footer>
