--- a/src/css/root.less
+++ b/src/css/root.less
@@ -839,7 +839,7 @@
             margin: auto;
             .lists {
                 display: flex;
-                justify-content: space-between;
+                justify-content: space-around;
                 flex-wrap: wrap;
                 width: 96%;
                 max-width: 307/16rem;
