--- a/src/css/root.css
+++ b/src/css/root.css
@@ -266,7 +266,7 @@
     overflow: hidden;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     background-color: #fff;
-    top: 3.7rem;
+    top: 3.6875rem;
     padding-top: 0;
     height: 0;
     transition: height 0.3s, padding-top 0.3s, top 0.3s;
@@ -652,7 +652,7 @@
   }
   #footer .right-section .lists {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
     width: 96%;
     max-width: 19.1875rem;
