--- a/src/css/critical.css
+++ b/src/css/critical.css
@@ -9,7 +9,6 @@
     text-align: center;
     /* changes on tablet */
     padding: 0 1rem;
-    padding-bottom: 6.25rem;
     position: relative;
     z-index: 1;
     /* prevents overflow from the lines extending past the screen width */
@@ -31,7 +30,7 @@
     width: 100%;
     height: 100%;
     background: #000;
-    opacity: .4;
+    opacity: .5;
     position: absolute;
     display: block;
     top: 0;
@@ -55,14 +54,19 @@
     /* we put the padding top and bottom on the container instead of #Hero so the pseudo element lines go to the top and bottom of the section */
     /* 144px - 280px - leaving extra space for the navigation */
     /* changes on tablet */
-    padding: clamp(9em, 25.95vw, 17.5em) 0;
+    padding: clamp(9em, 25.95vw, 8.5em) 0;
     margin: auto;
     position: relative;
+    justify-content: center;
+    flex-flow: row;
+    display: flex;
+    align-items: center;
+  }
+  #hero .cs-picture1 {
+    display: none;
   }
   #hero .cs-flex-group {
     /* 60px - 220px */
-    margin-bottom: clamp(3.75em, 15.5vw, 13.75em);
-    margin: auto;
     width: 80vw;
     /* 464px - 562px */
     max-width: clamp(29em, 60vw, 35.125em);
@@ -196,13 +200,42 @@
     padding: 0 clamp(2em, 5vw, 2.5em);
   }
   #hero .cs-container {
-    padding: clamp(7em, 27.95vw, 17.5em) 0 clamp(9em, 30.95vw, 23.5em) 0;
+    padding: clamp(7em, 27.95vw, 8.5em) 0 clamp(9em, 30.95vw, 8.5em) 0;
+    justify-content: space-between;
   }
   #hero .cs-button-solid {
     margin-bottom: 0;
     margin-right: 1.25rem;
   }
+  #hero .cs-left {
+    /* scaling the font size with the view width */
+    /* using ems so we can use font size to scale the whole section */
+    font-size: min(2.31vw, .7em);
+    width: 25.4375em;
+    height: 46.3125em;
+    position: relative;
+  }
+  #hero .cs-picture1 {
+    /* clips img tag corners */
+    overflow: hidden;
+    position: absolute;
+    display: block;
+  }
+  #hero .cs-picture1 img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    /* makes image act like a background image */
+    object-fit: cover;
+  }
+  #hero .cs-picture1 {
+    width: 32.5em;
+    height: 46.3125em;
+  }
 }
+/* Desktop - 1024px */
 /* Desktop Parallax Effect - 1300px */
 @media only screen and (min-width: 81.25em) {
   #hero {
