--- a/src/css/root.css
+++ b/src/css/root.css
@@ -103,6 +103,7 @@
     height: 3.125rem;
     text-align: center;
     padding: 0 1.875rem;
+    margin-right: 1rem;
     position: relative;
     z-index: 1;
     background-color: var(--primary);
