--- a/src/css/root.less
+++ b/src/css/root.less
@@ -111,6 +111,7 @@
         height: 50/16rem;
         text-align: center;
         padding: 0 30/16rem;
+        margin-right: 1rem;
         position: relative;
         z-index: 1;
         background-color: var(--primary);
