Changed font size and button margin bottom

--- a/src/css/root.css
+++ b/src/css/root.css
@@ -16,6 +16,7 @@
     --headerFontSize: clamp(1.9375rem, 4.5vw, 3.0625rem);
     /* 60px - 100px top and bottom */
     --sectionPadding: clamp(3.75em, 7.82vw, 6.25em) 1rem;
+    --bodyFontSize: 1.125em;
   }
   /* roboto-regular - latin */
   @font-face {
@@ -104,6 +105,7 @@
     text-align: center;
     padding: 0 1.875rem;
     margin-right: 1rem;
+    margin-bottom: 1rem;
     position: relative;
     z-index: 1;
     background-color: var(--primary);
