--- a/src/css/root.less
+++ b/src/css/root.less
@@ -21,6 +21,8 @@
 
         /* 60px - 100px top and bottom */
         --sectionPadding: clamp(3.75em, 7.82vw, 6.25em) 16/16rem;
+
+        --bodyFontSize: 1.125em;
     }
 
     // Grab your fonts to locally host from https://google-webfonts-helper.herokuapp.com/fonts
@@ -112,6 +114,7 @@
         text-align: center;
         padding: 0 30/16rem;
         margin-right: 1rem;
+        margin-bottom: 1rem;
         position: relative;
         z-index: 1;
         background-color: var(--primary);
