--- a/src/css/critical.less
+++ b/src/css/critical.less
@@ -223,7 +223,7 @@
 
         .cs-container {
             padding: clamp(7em, 27.95vw, 8.5em) 0 clamp(9em, 30.95vw, 8.5em) 0;
-            justify-content: space-between;
+            justify-content: space-around;
         }
 
         .cs-button-solid {
