--- a/src/css/critical.css
+++ b/src/css/critical.css
@@ -201,7 +201,7 @@
   }
   #hero .cs-container {
     padding: clamp(7em, 27.95vw, 8.5em) 0 clamp(9em, 30.95vw, 8.5em) 0;
-    justify-content: space-between;
+    justify-content: space-around;
   }
   #hero .cs-button-solid {
     margin-bottom: 0;
