--- a/src/css/root.less
+++ b/src/css/root.less
@@ -7,7 +7,7 @@
 
     // Website colors
     :root {
-        --primary: #FFBA19;
+        --primary: #FA4B0F;
         --primaryShade: #ffd675;
         --primaryDark: #805d0d;
         --bodyTextColor: #4E4B66;
