--- a/src/css/myafterlife.less
+++ b/src/css/myafterlife.less
@@ -46,7 +46,7 @@
 
         .cs-picture1 {
             width: 520/16em;
-            height: 741/16em;
+            height: 821/16em;
             right: 0;
             top: 0;
         }
@@ -155,6 +155,7 @@
         .cs-container {
             flex-flow: row;
             justify-content: space-between;
+            align-items: flex-start;
             gap: 52/16rem;
         }
 
