--- a/src/css/myafterlife.css
+++ b/src/css/myafterlife.css
@@ -182,3 +182,139 @@
     opacity: .2;
   }
 }
+/*-- -------------------------- -->
+<---          Reviews           -->
+<--- -------------------------- -*/
+/* Mobile - 360px */
+@media only screen and (min-width: 0em) {
+  #reviews {
+    padding-top: 7.5rem;
+    padding-bottom: 3.125rem;
+    margin: auto;
+    text-align: center;
+  }
+  #reviews .title-container {
+    width: 100%;
+    max-width: 69rem;
+    margin: auto;
+  }
+  #reviews .topper {
+    font-size: var(--topperFontSize);
+    line-height: 1.2em;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: .1em;
+    font-weight: 700;
+    color: var(--primary);
+    margin-bottom: 1rem;
+    display: block;
+  }
+  #reviews .title {
+    font-size: var(--headerFontSize);
+    font-weight: 900;
+    line-height: 1.2em;
+    text-align: center;
+    max-width: 43.75rem;
+    margin: 0 auto 1rem;
+    color: var(--headerColor);
+    position: relative;
+  }
+  #reviews .review-container {
+    width: 96%;
+    max-width: 82.5rem;
+  }
+  #reviews .review {
+    padding: 4rem 1.875rem 1.125rem 1.875rem;
+    box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.05);
+    width: 100%;
+    max-width: 25.625rem;
+    margin: auto;
+    margin-bottom: 6.25rem;
+    border-radius: 0.3125rem;
+    position: relative;
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+  }
+  #reviews .review:last-of-type {
+    margin-bottom: 0;
+  }
+  #reviews .review .profile {
+    display: block;
+    height: 6.1875rem;
+    width: 6.1875rem;
+    margin-left: 0;
+    border-radius: 50%;
+    margin-bottom: 1rem;
+    position: absolute;
+    left: 1.875rem;
+    top: -3.1875rem;
+  }
+  #reviews .review p {
+    line-height: 1.33333333;
+    margin-bottom: 1.75rem;
+    text-align: left;
+  }
+  #reviews .review .star-group {
+    border-top: 1px solid #E7E7E7;
+    padding-top: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: nowrap;
+    margin-top: auto;
+  }
+  #reviews .review .star-group .name {
+    color: #1A1A1A;
+    line-height: 1.5rem;
+    text-align: left;
+    font-weight: bold;
+    display: block;
+  }
+  #reviews .review .star-group .desc {
+    color: #575757;
+    font-weight: 400;
+    display: block;
+  }
+  #reviews .review .star-group img {
+    display: block;
+    width: 5.6875rem;
+    height: 0.9375rem;
+    margin: 0;
+  }
+}
+/* Tablet - 768px */
+@media only screen and (min-width: 48em) {
+  #reviews {
+    padding-top: 9.375rem;
+    padding-bottom: 3.125rem;
+  }
+  #reviews .review-container {
+    font-size: min(1.4vw, 1em);
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 0;
+    column-gap: 1.875rem;
+  }
+  #reviews .review {
+    margin: 0;
+    margin-bottom: 9.375rem;
+  }
+  #reviews .review:last-of-type {
+    margin-bottom: 9.375rem;
+  }
+}
+/* Dark Mode */
+@media only screen and (min-width: 0em) {
+  body.dark-mode #reviews .review {
+    background: var(--medium);
+  }
+  body.dark-mode #reviews .review .name {
+    color: #fff;
+  }
+  body.dark-mode #reviews .review .desc {
+    color: #fff;
+    opacity: .7;
+  }
+}
