--- a/src/css/myafterlife.less
+++ b/src/css/myafterlife.less
@@ -250,7 +250,7 @@
             line-height: 1.2em;
             text-align: center;
             max-width: 700/16rem;
-            margin: 0 auto 16/16rem;
+            margin: 0 auto 128/16rem;
             color: var(--headerColor);
             position: relative;
         }
@@ -258,6 +258,7 @@
         .review-container {
             width: 96%;
             max-width: 1320/16rem;
+            margin: auto;
         }
 
         .review {
@@ -325,6 +326,10 @@
                 }
             }
         }
+
+        .button-solid{
+            margin-top: 2rem;
+        }
     }
 }
 
@@ -351,6 +356,10 @@
             &:last-of-type {
                 margin-bottom: 150/16rem;
             }
+        }
+
+        .button-solid{
+            margin-top: 0;
         }
     }
 }
