--- a/src/css/root.less
+++ b/src/css/root.less
@@ -376,7 +376,7 @@
                                 height: 8/16rem;
                                 background: var(--primary);
                                 opacity: 1;
-                                bottom: 5/1rem;
+                                bottom: .3rem;
                                 border-radius: 4/16rem;
                                 left: -6/16rem;
                                 right: -6/16rem;
