--- a/src/css/myafterlife.css
+++ b/src/css/myafterlife.css
@@ -215,13 +215,14 @@
     line-height: 1.2em;
     text-align: center;
     max-width: 43.75rem;
-    margin: 0 auto 1rem;
+    margin: 0 auto 8rem;
     color: var(--headerColor);
     position: relative;
   }
   #reviews .review-container {
     width: 96%;
     max-width: 82.5rem;
+    margin: auto;
   }
   #reviews .review {
     padding: 4rem 1.875rem 1.125rem 1.875rem;
@@ -282,6 +283,9 @@
     height: 0.9375rem;
     margin: 0;
   }
+  #reviews .button-solid {
+    margin-top: 2rem;
+  }
 }
 /* Tablet - 768px */
 @media only screen and (min-width: 48em) {
@@ -303,6 +307,9 @@
   }
   #reviews .review:last-of-type {
     margin-bottom: 9.375rem;
+  }
+  #reviews .button-solid {
+    margin-top: 0;
   }
 }
 /* Dark Mode */
