--- a/src/css/root.css
+++ b/src/css/root.css
@@ -325,7 +325,7 @@
     height: 0.5rem;
     background: var(--primary);
     opacity: 1;
-    bottom: 5rem;
+    bottom: .3rem;
     border-radius: 0.25rem;
     left: -0.375rem;
     right: -0.375rem;
