--- a/src/_layouts/base.html
+++ b/src/_layouts/base.html
@@ -62,6 +62,7 @@
 
         <script defer src="/assets/js/nav.js"></script>
         <script defer src="/assets/js/dark.js"></script>
+        <script defer src="/assets/js/fvf.js"></script>
 
         <!--
         This script adds a class to the body after scrolling 100px
