--- a/src/css/myafterlife.less
+++ b/src/css/myafterlife.less
@@ -364,6 +364,8 @@
     }
 }
 
+
+
 /* Dark Mode */
 @media only screen and (min-width: 0em) {
     body.dark-mode {
@@ -382,4 +384,137 @@
             }
         }
     }
+}
+
+/*-- -------------------------- -->
+<---       Side By Side         -->
+<--- -------------------------- -*/
+
+/* Mobile - 360px */
+@media only screen and (min-width: 0em) {
+
+#fvf{
+@color0: #03b5d2; // Appears 8 times
+* {
+	&:before {
+			box-sizing: border-box;
+		}
+	&:after {
+			box-sizing: border-box;
+		}
+}
+body {
+	background: #ffffff;
+	color: #4d5974;
+	display: flex;
+	font-family: 'Hind', sans-serif;
+	margin: 0;
+	min-height: 100vh;
+	padding: 0;
+}
+.container {
+	margin: 0 auto;
+	padding: 4rem;
+	width: 48rem;
+}
+.accordion {
+	.accordion-item {
+		border-bottom: 1px solid #e5e5e5;
+		button[aria-expanded='true'] {
+			border-bottom: 1px solid @color0;
+		}
+	}
+	button {
+		background: none;
+		border: none;
+		color: #7288a2;
+		display: block;
+		font-size: 1.15rem;
+		font-weight: 400;
+		outline: none;
+		padding: 1em 0;
+		position: relative;
+		text-align: left;
+		width: 100%;
+		&:hover {
+			color: @color0;
+			cursor: pointer;
+			&:after {
+					border: 1px solid @color0;
+					color: @color0;
+					cursor: pointer;
+				}
+			}
+		&:focus {
+			color: @color0;
+			cursor: pointer;
+			 
+			&:after {
+				border: 1px solid @color0;
+				color: @color0;
+				cursor: pointer;
+			}
+		}
+		.accordion-title {
+			padding: 1em 1.5em 1em 0;
+		}
+		.icon {
+			border-radius: 22px;
+			border: 1px solid;
+			display: inline-block;
+			height: 22px;
+			position: absolute;
+			right: 0;
+			top: 18px;
+			width: 22px;
+			&:before {
+					background: currentColor;
+					content: '';
+					display: block;
+					height: 2px;
+					left: 5px;
+					position: absolute;
+					top: 9px;
+					width: 10px;
+				}
+				&:after {
+					background: currentColor;
+					content: '';
+					display: block;
+					height: 10px;
+					left: 9px;
+					position: absolute;
+					top: 5px;
+					width: 2px;
+				}
+			}
+		}
+	}
+	button[aria-expanded='true'] {
+		color: @color0;
+	}
+	button[aria-expanded='true'].icon {
+		&:after {
+			width: 0;
+		}
+	}
+	button[aria-expanded='true']+.accordion-content {
+		max-height: 9em;
+		opacity: 1;
+		transition: all 200ms linear;
+		will-change: opacity, max-height;
+	}
+	.accordion-content {
+		max-height: 0;
+		opacity: 0;
+		overflow: hidden;
+		transition: opacity 200ms linear, max-height 200ms linear;
+		will-change: opacity, max-height;
+		p {
+			font-size: 1rem;
+			font-weight: 300;
+			margin: 2em 0;
+		}
+	}
+}
 }
