--- a/src/_layouts/blog-post.html
+++ b/src/_layouts/blog-post.html
@@ -2,7 +2,7 @@
 layout: 'base.html'
 preloadCSS: '/css/blog.css'
 eleventyComputed:
-    description: '{{ blogDescription }}'
+    description: '{{ description }}'
     metaTitle: '{{ blogTitle }}'
     tagTitle: '{{ titleTag }}'
     preloadImg: '{{ image }}'
