--- a/src/css/root.less
+++ b/src/css/root.less
@@ -24,7 +24,6 @@
 
         --bodyFontSize: 1.125em;
     }
-
     // Grab your fonts to locally host from https://google-webfonts-helper.herokuapp.com/fonts
     
     /* roboto-regular - latin */
@@ -62,6 +61,7 @@
         font-family: 'Roboto', Arial, sans-serif;
         color: var(--bodyTextColor);
         overflow-x: hidden;
+        scroll-behavior: smooth;
     }
 
     *, *:before, *:after {
