New Logo + CTA Edit

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -17,9 +17,6 @@
                         <a href="/">Home</a>
                     </li>
                     <li>
-                        <a href="/about">About</a>
-                    </li>
-                    <li>
                         <a href="/myafterlife">My Afterlife</a>
                     </li>
                     <li>
@@ -38,7 +35,7 @@
 
     <div class="credit">
         <span>Designed and Hand Coded by</span>
-        <a href="" target="_blank" rel="noopener">Out of this World Web Design</a>
+        <a href="mailto: domenicdicosimo@gmail.com" target="_blank" rel="noopener">Out of this World Web Design</a>
         <span class="copyright"> Copyright 2023 - Present</span>
     </div>
 </footer>
