--- a/src/css/local.less
+++ b/src/css/local.less
@@ -758,6 +758,34 @@
 
         .container {
             text-align: center;
+
+            form{
+                display: flex;
+                flex-wrap: wrap;
+
+                #submit{
+                    flex: 1 1 15ch;
+                    margin: 5px;
+                }
+            }
+            
+            input{
+                font-size: 1.2rem;
+                border-radius: 0.25rem;
+                border-color: rgba(88,88,88,.15);
+                padding: 0.75rem 0 0.75rem 1rem;
+                margin: 5px;
+            }
+            #name{
+                flex: 1 1 10ch;
+            }
+    
+            #email{
+                flex: 3 1 0;
+            }
+            #robot{
+                display: none;
+            }
         }
 
         picture {
@@ -833,7 +861,7 @@
             z-index: -3;
          }
         .container {
-            width: 90.0625%;
+            width: 64%;
             margin: auto;
         }
 
