--- a/src/css/root.less
+++ b/src/css/root.less
@@ -113,11 +113,13 @@
         height: 50/16rem;
         text-align: center;
         padding: 0 30/16rem;
+        margin-top: 5px;
         margin-right: 1rem;
         margin-bottom: 1rem;
         position: relative;
         z-index: 1;
         background-color: var(--primary);
+        border-style: none;
 
         // Transition Properties
         color: #000;
@@ -207,7 +209,7 @@
         // Logo
         .logo {
             display: inline-block;
-            height: 30/16rem ;
+            height: 62/16rem ;
             width: auto;
 
             img {
@@ -510,7 +512,7 @@
         .logo {
             // Margin-right: auto Pushes everything away from the right, nudging it to the left and pushing everyting to the right
             margin-right: auto;
-            height: 60/16rem;
+            height: 76/16rem;
             width: auto;
 
             img {
@@ -814,7 +816,7 @@
                 display: inline-block;
                 margin: auto;
 				width: auto;
-                height: 50/16em;
+                height: 62/16em;
                 margin-bottom: 30/16em;
                 text-align: center;
 
