--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -6,6 +6,17 @@
     <div class="container">
         <div class="left-section">
             <a class="logo" href="/"><img loading="lazy" decoding="async" src="/assets/images/logo-white.png" alt="logo" width="264" height="78"></a>
+            <p>
+                Connect With David:
+            </p>
+            <div class="wrapper">
+                <a href="https://www.facebook.com/profile.php?id=100086551685271" class="icon facebook" target="_blank" rel="noopener noreferrer">
+                    <span><i class="fab fa-facebook-f"></i></span>
+                </a>
+                <a href="https://twitter.com/McelweePage?t=2ldCIn0fChBy4aMD9mREtA&s=09" class="icon twitter" target="_blank" rel="noopener noreferrer">
+                    <span><i class="fab fa-twitter"></i></span>
+                </a>
+            </div>
         </div>
         <div class="right-section">
             <div class="lists">
