--- a/src/_layouts/base.html
+++ b/src/_layouts/base.html
@@ -31,6 +31,8 @@
         <link rel="preload" as="image" href="/assets/images/logo-white.png">
         <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/roboto-v29-latin-regular.woff2" crossorigin>
         <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/roboto-v29-latin-700.woff2" crossorigin>
+        <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
+
 
         <link rel="stylesheet" href="/css/root.css">
         <link rel="stylesheet" href="/css/dark.css">
