--- a/src/css/root.less
+++ b/src/css/root.less
@@ -828,14 +828,80 @@
             }
     
             p {
-                font-size: 14/16rem;
+                font-size: (32/16rem);
                 line-height: 27/14;
                 color: #fff;
 				opacity: .9;
                 text-align: center;
                 width: 100%;
-                width: 307/14rem;
                 margin: auto;
+            }
+
+            .wrapper{
+                    display: flex;
+                    justify-content: center;
+                    .icon {
+                        position: relative;
+                        background-color: #ffffff;
+                        border-radius: 50%;
+                        margin: 10px;
+                        width: 50px;
+                        height: 50px;
+                        line-height: 50px;
+                        font-size: 22px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+                        cursor: pointer;
+                        transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+                        color: #333;
+                        text-decoration: none;
+                    }
+                    .tooltip {
+                        position: absolute;
+                        top: 0;
+                        line-height: 1.5;
+                        font-size: 14px;
+                        background-color: #ffffff;
+                        color: #ffffff;
+                        padding: 5px 8px;
+                        border-radius: 5px;
+                        box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+                        opacity: 0;
+                        pointer-events: none;
+                        transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+                    }
+                    .facebook {
+                        &:hover {
+                            background-color: #3b5999;
+                            color: #ffffff;
+                            .tooltip {
+                                background-color: #3b5999;
+                                color: #ffffff;
+                                &::before {
+                                    background-color: #3b5999;
+                                    color: #ffffff;
+                                }
+                            }
+                        }
+                    }
+                    .twitter {
+                        &:hover {
+                            background-color: #46c1f6;
+                            color: #ffffff;
+                            .tooltip {
+                                background-color: #46c1f6;
+                                color: #ffffff;
+                                &::before {
+                                    background-color: #46c1f6;
+                                    color: #ffffff;
+                                }
+                            }
+                        }
+                    }
+                
+                
             }
         }
 
@@ -971,6 +1037,11 @@
             width: 409/16rem;
             margin: 0;
             text-align: left;
+
+            .wrapper{
+                display: flex;
+                justify-content: flex-start;
+            }
 
             .logo {
                 text-align: left;
