--- a/src/css/contact.less
+++ b/src/css/contact.less
@@ -159,7 +159,8 @@
 
         .cs-right-section {
             position: relative;
-            height: 320/16rem;
+            width: 631/16em;
+            height: 636/16em;
             /* 24px - 40px top & bottom */
             /* 20px - 40px left & right */
             padding: clamp(1.5rem, 3vw, 2.5rem) clamp(1.25rem, 3vw, 2.5rem);
@@ -170,6 +171,31 @@
             flex-direction: column;
             align-items: flex-start;
             justify-content: flex-end;
+            font-size:~"min(2.31vw, .7em)";
+    
+            .cs-picture {
+                border-radius: 24/16em;
+                /* clips img tag corners */
+                overflow: hidden;
+                position: absolute;
+                display: block;
+                img {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    height: 120%;
+                    width: 100%;
+                    /* makes image act like a background image */
+                    object-fit: cover;
+                }
+            }
+    
+            .cs-picture1 {
+                width: 522/16em;
+                height: 581/16em;
+                left: 0;
+                top: 0;
+            }
         }
 
         .cs-header {
